--- a/vercel.json
+++ b/vercel.json
@@ -62,6 +62,22 @@
     {
       "source": "/trainer/:id/",
       "destination": "https://palettetown-backend.vercel.app/trainer/:id/"
+    },
+    {
+      "source": "/post/:id",
+      "destination": "https://palettetown-backend.vercel.app/post/:id"
+    },
+    {
+      "source": "/post/:id/",
+      "destination": "https://palettetown-backend.vercel.app/post/:id/"
+    },
+    {
+      "source": "/post",
+      "destination": "https://palettetown-backend.vercel.app/post"
+    },
+    {
+      "source": "/post/",
+      "destination": "https://palettetown-backend.vercel.app/post/"
     }
   ],
   "builds": [
